...
                android:layout_centerHorizontal="true"
                android:background="@color/grey_dividers">

            </View>

            <Button
                android:id="@+id/connect_button"
                android:layout_width="@dimen/connect_button"
                android:layout_height="@dimen/connect_button"
                android:text="@string/connect"
                android:background="@drawable/round_button"
                android:layout_marginTop="@dimen/connect_button_margin"
                android:layout_alignParentTop="true"
...
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:layout_below="@+id/connect_button"
                android:layout_centerHorizontal="true" />

            <ProgressBar
                android:id="@+id/bluetooth_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bluetooth_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margintop_progresbar_main" />

...
