...
    <!-- poner aqui el string del altimetro -->
    <string name="title_air_monitor">Calidad del aire</string>
    <string name="air_quality_textview">CALIDAD DEL AIRE: </string>
    <string name="good">BUENA</string>
    <string name="moreorless">SATISFACTORIA</string>
    <string name="bad">MALA</string>
    <string name="subtitle_air_monitor">Valores</string>
    <string name="title_plot_co2">Gráfico dióxido de carbono</string>
    <string name="title_plot_all_gases">Gráfico de gases no abundantes</string>
    <string name="title_enviroment">Clima</string>
    <string name="subtitle_altimeter">Termómetro y Barómetro</string>
    <string name="title_register">Registro</string>
    <string name="subtitle_register">Datos</string>
...
        <item>Cantidad</item>
        <item>Fecha</item>
    </string-array>
    <string name="porcent">%</string>
    <string name="title_activity_device_list">hahahaha</string>
    <string name="background_running">Se recolectarán los datos en segundo plano</string>
    <string name="open_nav_drawer">open</string>
    <string name="close_nav_drawer">close</string>
    <string name="preference_import_database">Importar base de datos</string>
    <string name="preference_import_database_summary">Importar base de datos desde almacenamiento externo (formato .csv) contenido en la carpeta: Arduino Air Quality Monitor, debe de tener el nombre de GAS_READING.csv</string>
    <string name="import_button">import_button</string>
    <string name="import_success">Importación exitosa</string>
    <string name="import_failed">Lo sentimos, ha ocurrido un error al importar</string>
...
