...
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="0dp"
        android:background="@color/grey_dividers"></View>

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:divider="@color/cyan_100_accent">
    </ListView>
<!--
    <FrameLayout
...
